--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
 <body>
   <h1>Sophia Sun CPA</h1>
   <p>Excellent Professional Accounting Service</p>
-  <p>This Page is under construction</p>
+  <p>This Page is under construction!</p>
 </body>
 </html>
